--- a/package.json
+++ b/package.json
@@ -31,16 +31,16 @@
     "@asyncapi/openapi-schema-parser": "^2.0.1",
     "@asyncapi/parser": "^1.15.1",
     "@asyncapi/react-component": "^1.0.0-next.38",
-    "@asyncapi/specs": "^2.14.0",
+    "@asyncapi/specs": "^3.0.0",
     "@headlessui/react": "1.4.1",
     "@hookstate/core": "^3.0.12",
-    "@monaco-editor/react": "^4.2.2",
+    "@monaco-editor/react": "^4.4.5",
     "@semantic-release-plus/docker": "^3.1.1",
     "js-base64": "^3.7.2",
     "js-file-download": "^0.4.12",
     "js-yaml": "^4.1.0",
-    "monaco-editor": "^0.28.1",
-    "monaco-yaml": "^2.5.1",
+    "monaco-editor": "0.28.1",
+    "monaco-yaml": "2.5.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-flow-renderer": "^9.6.9",
