Support arm64 architecture in docker image.
    - Chromium was skipped from puppeteer since it was already
    unused and it isn't compatible with `arm64`.
    Chromium would only be used to export a PDF of the HTML site,
    which is already unsupported. If support is required in the future,
    install chromium using the package manager of the image.
    - Changes were tested in a Mac with M1 processor and worked
    successfully.

--- a/package.json
+++ b/package.json
@@ -59,7 +59,7 @@
     "generate:readme:toc": "markdown-toc -i README.md",
     "generate:assets": "npm run build && npm run generate:readme:toc",
     "generate:template-parameters": "ts-node ./scripts/template-parameters.ts",
-    "generate:docker": "docker build --tag asyncapi/studio .",
+    "generate:docker": "docker buildx build --platform linux/amd64,linux/arm64 --tag asyncapi/studio .",
     "bump:version": "npm --no-git-tag-version --allow-same-version version $VERSION",
     "release": "npm run generate:docker && semantic-release",
     "prepublishOnly": "npm run build && npm run generate:readme:toc"
