--- a/src/examples/streetlights-kafka.yml
+++ b/src/examples/streetlights-kafka.yml
@@ -1,6 +1,6 @@
 asyncapi: '2.4.0'
 info:
-  title: Streetlights asddasdas Kafka API
+  title: Streetlights Kafka API
   version: '1.0.0'
   description: |
     The Smartylighting Streetlights API allows you to remotely manage the city lights.
