--- a/package.json
+++ b/package.json
@@ -114,6 +114,7 @@
     "eslint-plugin-react": "7.31.10",
     "eslint-plugin-security": "^1.5.0",
     "eslint-plugin-sonarjs": "^0.16.0",
+    "fs": "^0.0.1-security",
     "https-browserify": "^1.0.0",
     "markdown-toc": "^1.2.0",
     "path-browserify": "^1.0.1",
