--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "@asyncapi/parser": "^2.0.0-next-major.10",
     "@asyncapi/react-component": "^1.0.0-next.44",
     "@asyncapi/specs": "^4.0.1",
+    "@ebay/nice-modal-react": "^1.2.8",
     "@headlessui/react": "^1.7.4",
     "@hookstate/core": "^4.0.0-rc21",
     "@monaco-editor/react": "^4.4.6",
