--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "@monaco-editor/react": "^4.4.6",
     "@tippyjs/react": "^4.2.6",
     "allotment": "^1.17.0",
+    "eventemitter2": "^6.4.9",
     "js-base64": "^3.7.3",
     "js-file-download": "^0.4.12",
     "js-yaml": "^4.1.0",
@@ -48,6 +49,7 @@
     "react-hot-toast": "2.4.0",
     "react-icons": "^4.6.0",
     "reactflow": "^11.2.0",
+    "strict-event-emitter-types": "^2.0.0",
     "zustand": "^4.1.4"
   },
   "scripts": {
